# Game-ideas

./: .gitignore  CMakeCache.txt  CMakeLists.txt  D&D Project.md  Game concept 1.md  Game concept for the university project on C++.docx  README.md
Code/: CMakeCache.txt  CMakeLists.txt  Code  Makefile  battle.cpp  battle.h  character.cpp  character.h  cmake_install.cmake  commands.cpp  commands.h  dice.cpp  dice.h  glossary.cpp  glossary.h  interactions.cpp  interactions.h  inventory.cpp  inventory.h  items.cpp  items.h  main.cpp  text.cpp  text.h  ui.cpp  ui.h  world.cpp  world.h
